# git_home_work

./: main.c  new_file.cpp  original_text.txt
docker/alpine/: README.md
docker/alpine/images/: Dockerfile.client  Dockerfile.server
docker/alpine/scripts/: client.sh  server.sh
hw/hw5_simple_linux_project_homework/:  README.md  Makefile.am  configure.ac
hw/hw5_simple_linux_project_homework/src/: func.c  header.h  main.c
hw/hw5_simple_linux_project_homework/test/hw_5_simple_linux_project-0.1/: Makefile  Makefile.in  config.status  configure  hw_5_simple_linux_project
hw/hw5_simple_linux_project_homework/test/hw_5_simple_linux_project-0.1/.deps/: func.Po  main.Po
hw/hw6_complex_linux_project_homework/: Makefile
hw/hw6_complex_linux_project_homework/text_formatter/: low  low.c  upper
hw/hw7_gnu/Make_task1/: Makefile_2_1  main.c  (+2 more)
hw/hw_4_files_searcher/: files_searcher.sh
libs/shared_libs/: header.h  main
libs/static_libs/: add.c  fact.c  main  main.c
lnx_hw_1/dir2/: src4_damaged_soft_link
math_lib/inc/: math_lib.h
math_lib/src/: math_lib.c
network_hws/hw1/: ntw_hw_1.pkt
simple_linux_project/: Makefile  MakefileClean  MakefileDeps  MakefileVariable  hello_func.c  hello_make.h  hello_world  hello_world.c
simple_linux_project_with_configure/: Makefile  Makefile.in  config.status  configure.ac  helloworld
simple_linux_project_with_configure/.deps/: hello_world.Po
simple_linux_project_with_configure/autom4te.cache/: output.0  output.1  traces.0  traces.1
to_remove/calculator/: main  main.c
to_remove/text_formatter/: low  upper  upper.c
(+19 files in other folders)
