AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = hw_5_simple_linux_project
hw_5_simple_linux_project_SOURCES = src/main.c src/func.c src/header.h

clean-all:
	rm -f /usr/local/bin/hw_5_simple_linux_project
	rm -f /usr/local/include/header.h
	rm -rf autom4te.cache
	rm -f config.h config.log config.status
	rm -f Makefile Makefile.in
	rm -rf src/*.o
	rm -f *~
	rm -f aclocal.m4
	rm -rf configure
	rm -f missing install-sh depcomp compile